[#153] refactor: 이중 stream 분리